--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "mks-sistemas",
   "version": "0.1.0",
   "private": true,
+  "jest": {
+    "testEnvironment": "jsdom"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "axios": "^1.6.1",
+    "localforage": "^1.10.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
@@ -17,11 +22,19 @@
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.0",
+    "@types/jest": "^29.5.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "typescript": "^5"
   }
 }
