--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,7 @@
   "presets": [
     "@babel/preset-typescript",
     "@babel/preset-react",
-    "@babel/preset-env"
+    "@babel/preset-env",
+    "next/babel"
   ]
 }
